--- a/css/bubbles.css
+++ b/css/bubbles.css
@@ -4,12 +4,12 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
+	font-family: Lato, sans-serif;
 	color: #2c2c2c;
 }
 .bubble-container .input-wrap textarea {
 	width: calc(100% - 20px);
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
+	font-family: Lato, sans-serif;
 	color: #2c2c2c;
 	background: rgba(250, 250, 250, 0.95);
 	font-size: 1em;
@@ -224,18 +224,6 @@
 	-webkit-overflow-scrolling: touch;
 	-webkit-transform: translate3d(0, 0, 0);
 }
-/* optional page styles */
-/*h1 {*/
-	/*text-align: center;*/
-	/*font-weight: 300;*/
-	/*font-size: 4em;*/
-	/*margin: .5em auto 0.15em;*/
-/*}*/
-/*body {*/
-	/*font-family: "Helvetica Neue", Helvetica, sans-serif;*/
-	/*margin: 0;*/
-/*}*/
-/* style "loading" or "typing" stae */
 
 .bubble-typing {
 	width: 38px;
