--- a/css/style.css
+++ b/css/style.css
@@ -19,23 +19,27 @@ a:hover{
 a:-webkit-any-link{
     text-decoration: none;
 }
-
+html{
+    height: 100%;
+}
 body{
-    background-color: #f7f7f7;
-    color:#424242;
+    font-family: Lato, sans-serif;
+    margin: 0;
+    height: 100%;
 }
 
 #HQ_page p,h1,h2,h3,h4,h5,h6{
     font-family: Lato, sans-serif;
-    font-size: medium;
 }
 
-p{
+#dlutb p,#dlutb .mainText ol,#dlutb .mainText ul,#dlutb .mainText li{
     font-size: 18px;
     line-height: 1.7em;
+    margin-top: 0.5ex;
+    margin-bottom: 0.5ex;
 }
 
-sup, sub {
+#dlutb sup,#dlutb  sub {
     font-size: 75%;
     height: 0;
     line-height: 0;
@@ -43,18 +47,181 @@ sup, sub {
     vertical-align: baseline;
 }
 
-sup {
+#dlutb sup {
     bottom: 1ex;
 }
 
-sub {
+#dlutb sub {
     top: .5ex;
 }
 
+#dlutb ol{
+    margin-left: 3em;
+}
+#dlutb a{
+    cursor:pointer;
+}
 #top_title{
     display:none;
 }
 #content{
     margin: 0;
     width:auto;
+    padding:0;
+}
+#dlutb #header {
+    background: url("http://2018.igem.org/wiki/images/3/35/T--DLUT_China_B--kidney.png") no-repeat fixed center center;
+    background-size: cover;
+    width:100%;
+    height: 100%;
+    min-height: 700px;
+}
+#dlutb #moduleHeader {
+    background: url("http://2018.igem.org/wiki/images/2/29/T--DLUT_China_B--logo.png") no-repeat fixed center center;
+    background-size: cover;
+    width:100%;
+    height: 470px;
+}
+#dlutb #nav{
+    float: right;
+    margin-top:38px;
+}
+#dlutb .title{
+    font-size: 20px;
+    border-bottom: 2px #41cd52 solid;
+    width:fit-content;
+    margin:60px auto 50px auto;
+    padding-bottom: 10px;
+    text-align: center;
+}
+#dlutb #teamName{
+    font-size: 20px;
+    font-family: Lato,sans-serif;
+    border-bottom: 2px #41cd52 solid;
+    margin-top: 200px;
+    margin-bottom: 0;
+}
+#dlutb .moduleTitle{
+    font-size: 20px;
+    border-bottom: 2px #41cd52 solid;
+    width:fit-content;
+    margin:170px auto 50px auto;
+    padding-bottom: 10px;
+    text-align: center;
+    font-family: Lato,sans-serif;
+}
+#dlutb #typed{
+    clear:both;
+    border:white 2px solid;
+    padding:15px;
+    height: fit-content;
+    width: fit-content;
+    margin:50px auto 0 auto;
+    min-height: 60px;
+    font-size: 40px;
+}
+#dlutb #slogan{
+    text-align: center;
+    user-select: none;
+    line-height: 60px;
+}
+#dlutb #start{
+    font-size: 20px;
+    width:fit-content;
+    margin:50px auto 0 auto;
+    display:block;
+    cursor: pointer;
+}
+#dlutb .subModule{
+    clear:both;
+    border:white 2px solid;
+    padding:15px;
+    width: fit-content;
+    margin:50px auto 0 auto;
+    height: 50px;
+    font-size: 30px;
+}
+#dlutb .subModule>span{
+    text-align: center;
+    line-height: 50px;
+}
+#dlutb .mainText{
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    margin-bottom: 60px;
+}
+#dlutb .mainText p{
+    font-size: 18px;
+    text-indent: 2em;
+}
+#dlutb #fixed1, #fixed3 {
+    background: url("http://2018.igem.org/wiki/images/2/29/T--DLUT_China_B--logo.png") no-repeat fixed center center;
+    background-size: cover;
+    width:100%;
+    height: 150px;
+    filter:brightness(40%);
+}
+#dlutb #fixed2, #fixed4 {
+    background: url("http://2018.igem.org/wiki/images/3/35/T--DLUT_China_B--kidney.png") no-repeat fixed center center;
+    background-size: cover;
+    width:100%;
+    height: 150px;
+    filter:brightness(40%);
+}
+#dlutb #footer{
+    background-color: hsl(197, 55%, 20%);
+    padding: 30px 60px 30px 60px;
+}
+#dlutb #footer h3{
+    color:white;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: left;
+}
+#dlutb #footer p{
+    color:hsl(197, 55%, 70%);
+    font-size: 16px;
+}
+#dlutb #footer #address p{
+    width:80%;
+}
+#dlutb #platformName,#dlutb #qrCode{
+    display:table-row;
+}
+#dlutb #address,#dlutb #follow,#dlutb #platformName p,#dlutb #qrCode div{
+    display: table-cell;
+    min-width: 30px;
+}
+
+#dlutb .btn{
+    border-radius: 30px;
+    border: 2px #41cd52 solid;
+    color: #41cd52;
+    font-size: 18px;
+    line-height: 30px;
+    transition:0.5s;
+    padding:8px;
+}
+#dlutb .btn:visited{
+    color:#41cd52;
+}
+#dlutb .btn:hover{
+    color:white;
+    background-color: #41cd52;
+}
+#dlutb #back{
+    height: 30px;
+    width:30px;
+    display: none;
+    position:fixed;
+    bottom:100px;
+    right:70px;
+    text-align: center;
+    font-size: 28px;
+}
+
+#dlutb #chatBubbles{
+   margin:0 auto 60px auto;
 }
