--- a/css/bubbles.css
+++ b/css/bubbles.css
@@ -74,7 +74,7 @@
   /* animation-duration: 1s; */
   animation-name: animate-reply;
   animation-play-state: paused;
-  animation-fill-mode: forwards;
+  /*animation-fill-mode: forwards;*/
   /* opacity: 0; */
   transform: translate3d(0px, 0px, 0px);
   animation-delay: -3s;
