--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -14,17 +14,17 @@
 }
 
 #box {
-    width: 600px;
-    height: 400px;
-    margin: 30px auto 0 auto;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
     padding: 0;
     overflow: hidden;
     position: relative;
 }
 
 #box_img {
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    height: 100vh;
     overflow: hidden;
     margin: 0;
     padding: 0;
@@ -39,29 +39,29 @@
 
 #box_img ul li img {
     display: block;
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 #word {
-    background: linear-gradient(to bottom, rgba(100, 111, 156, 0) 0, #09102b 100%);
-    position: relative;
-    height: 60px;
-    bottom: 60px;
+    position: absolute;
+    left: 10%;
+    top:50%;
     margin: 0;
     padding: 0;
+    width:35%;
 }
 
 #word ul li {
     position: absolute;
-    top: 0;
-    left: 80px;
     display: none;
     color: white;
     margin: 0;
     padding: 0;
+    font-size: 36px;
 }
 
 #controller {
