--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,8 @@ body {
 }
 
 #dlutb #moduleHeader {
-    background: url("http://2018.igem.org/wiki/images/2/29/T--DLUT_China_B--logo.png") no-repeat fixed center center;
-    background-size: cover;
+    /*background: url("http://2018.igem.org/wiki/images/2/29/T--DLUT_China_B--logo.png") no-repeat fixed center center;
+    background-size: cover;*/
     width: 100%;
     height: 470px;
 }
