--- a/css/nav.css
+++ b/css/nav.css
@@ -13,21 +13,30 @@
     }
 }
 
-ul.menu {
-    height: 2em;
-    width: max-content;
-    width:-moz-max-content;
+#dlutb #nav{
+    width:100%;
+    height: 60px;
+    margin:0;
+    background-color:#ee9147;
+}
+#dlutb #nav ul.menu {
+    height: 60px;
     padding: 0;
+    /*font-weight: bold;*/
+    color:rgb(255,230,153);
+    display: table;
+    margin:0 auto;
 }
 
 ul.menu > li {
     list-style: none;
     float: left;
-    padding-left: 10px;
-    padding-right: 10px;
-    line-height: 2em;
+    padding-left: 20px;
+    padding-right: 20px;
+    line-height: 60px;
+    height: 60px;
     text-align: center;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 ul.menu > li:hover {
@@ -61,16 +70,13 @@ ul.menu > li:hover > ul.subMenu {
     margin: 0;
 }
 
-ul.menu > li:last-child > ul.subMenu {
-    right: 0;
-}
-
 ul.menu > li > ul.subMenu > li {
     display: block;
     position: relative;
-    background-color: #f7f7f7;
+    background-color: #ed7d31d0;
     padding: 5px 20px;
     margin: 0;
+    line-height: 40px;
 }
 
 ul.menu > li > ul.subMenu > li:before {
@@ -81,8 +87,10 @@ ul.menu > li > ul.subMenu > li:before {
     left: 0;
     width: 100%;
     height: 100%;
-    box-shadow: 0 4px 10px 0 rgba(9, 16, 43, .15);
     z-index: -1;
+}
+ul.menu > li > ul.subMenu{
+    box-shadow: 0 4px 10px 0 rgba(9, 16, 43, .15);
 }
 
 ul.menu > li:after {
@@ -97,7 +105,8 @@ ul.menu > li:after {
     height: 3px;
     position: relative;
     bottom: 3px;
-    background: #41cd52;
+    /*background: #41cd52;*/
+    background: rgb(230,95,23);
     z-index: 1;
 }
 
