--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -15,26 +15,24 @@
 }
 
 #box {
-    max-width: 1100px;
-    height: 600px;
-    margin: 0 auto;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
     padding: 0;
     overflow: hidden;
     position: relative;
 }
 
 #box_img {
-    width: 1100px;
-    height: 600px;
+    width: 100%;
+    height: 100vh;
     overflow: hidden;
     margin: 0;
     padding: 0;
-    text-align: center;
 }
 
 #box_img ul li {
-    width:1100px;
-    height: 600px;
+    width:100vw;
     position: absolute;
     display: none;
     margin: 0;
@@ -43,10 +41,11 @@
 
 #box_img ul li img {
     display: block;
-    width: 1100px;
-    height: 600px;
+    width: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 #word {
