--- a/css/parts.css
+++ b/css/parts.css
@@ -12,10 +12,14 @@
     margin-right: auto;
     border-collapse: collapse;
     border: solid 2px #f68925;
+    background: none;
 }
 #dlutb #article .mainText table *{
     border: solid 1px #f68925;
     padding: 5px;
+    color: #f68925;
+    font-size: 16px;
+    background: none;
 }
 #dlutb #article .mainText table thead{
     text-align: center;
