--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,34 @@ body {
 }
 
 #dlutb #moduleHeader {
-    /*background: url("http://2018.igem.org/wiki/images/2/29/T--DLUT_China_B--logo.png") no-repeat fixed center center;
-    background-size: cover;*/
+    /*background: url("http://2018.igem.org/wiki/images/2/29/T--DLUT_China_B--logo.png") no-repeat fixed center center;*/
+    background-size: cover;
     width: 100%;
     height: 470px;
+}
+#dlutb .awards{
+    background: url("../img/Background/Awards.jpg") no-repeat center center;
+}
+#dlutb .demonstrate{
+    background: url("../img/Background/Demonstrate.jpg") no-repeat top center;
+}
+#dlutb .description{
+    background: url("../img/Background/Description.jpg") no-repeat bottom center;
+}
+#dlutb .design{
+    background: url("../img/Background/Design.jpg") no-repeat center center;
+}
+#dlutb .humanPractice{
+    background: url("../img/Background/HumanPractices.jpg") no-repeat center center;
+}
+#dlutb .interLab{
+    background: url("../img/Background/InterLab.jpg") no-repeat center center;
+}
+#dlutb .notebook{
+    background: url("../img/Background/Notebook.jpg") no-repeat center center;
+}
+#dlutb .parts{
+    background: url("../img/Background/Parts.jpg") no-repeat center center;
 }
 
 #dlutb h2.title {
@@ -137,18 +161,20 @@ body {
 }
 #dlutb #box #word{
     position: absolute;
-    top:35%;
-    left:20%;
+    top:27%;
+    left:7%;
 }
-#dlutb #box #word h2{
-    margin:15px auto;
-    font-size: 36px;
-    color:white;
-}
+/*#dlutb #box #word h2{*/
+    /*margin:15px auto;*/
+    /*font-size: 36px;*/
+    /*color:white;*/
+/*}*/
 #dlutb #box #word p{
-    margin:15px auto;
-    font-size: 24px;
+    width:45%;
+    font-size: 22px;
     color:white;
+    text-indent: 2em;
+    overflow: paged-y;
 }
 
 #dlutb #typed {
@@ -212,6 +238,14 @@ body {
     padding: 0;
 }
 
+#dlutb #article .mainText table{
+    background: none;
+}
+#dlutb #article .mainText table *{
+    color: #f68925;
+    background: none;
+}
+
 #dlutb #footer {
     background-color: #ee9349;
     padding: 30px 60px 30px 60px;
@@ -267,7 +301,7 @@ body {
     display: none;
     position: fixed;
     bottom: 100px;
-    right: 70px;
+    right: 50px;
     text-align: center;
     font-size: 28px;
     cursor:pointer;
